// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notebook /> spec Renders the empty component 1`] = `
<body>
  <div>
    <div
      class="euiPage euiPage--paddingMedium euiPage--grow"
    >
      <div
        class="euiPageBody euiPageBody--borderRadiusNone"
      >
        <div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <h3
              class="euiTitle euiTitle--large"
              data-test-subj="notebookTitle"
            >
              sample-notebook-1
            </h3>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <span
                      class="euiToolTipAnchor"
                    >
                      <button
                        class="euiButtonIcon euiButtonIcon--danger euiButtonIcon--small"
                        data-test-subj="notebook-delete-icon"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoaded euiButtonIcon__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2Zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2ZM6 3h4V1H6v2Z"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <span
                      class="euiToolTipAnchor"
                    >
                      <button
                        class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--small"
                        data-test-subj="notebook-edit-icon"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoaded euiButtonIcon__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12.148 3.148 11 2l-9 9v3h3l9-9-1.144-1.144-8.002 7.998a.502.502 0 0 1-.708 0 .502.502 0 0 1 0-.708l8.002-7.998ZM11 1c.256 0 .512.098.707.293l3 3a.999.999 0 0 1 0 1.414l-9 9A.997.997 0 0 1 5 15H2a1 1 0 0 1-1-1v-3c0-.265.105-.52.293-.707l9-9A.997.997 0 0 1 11 1ZM5 14H2v-3l3 3Z"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <span
                      class="euiToolTipAnchor"
                    >
                      <button
                        class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--small"
                        data-test-subj="notebook-duplicate-icon"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoaded euiButtonIcon__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.4 0c.235 0 .46.099.622.273l2.743 3c.151.162.235.378.235.602v9.25a.867.867 0 0 1-.857.875H3.857A.867.867 0 0 1 3 13.125V.875C3 .392 3.384 0 3.857 0H11.4ZM14 4h-2.6a.4.4 0 0 1-.4-.4V1H4v12h10V4Z"
                          />
                          <path
                            d="M3 1H2a1 1 0 0 0-1 1v13a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1v-1h-1v1H2V2h1V1Z"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div>
                    <div
                      class="euiPopover euiPopover--anchorDownCenter"
                    >
                      <div
                        class="euiPopover__anchor"
                      >
                        <button
                          class="euiButton euiButton--primary euiButton--small"
                          data-test-subj="reporting-actions-button"
                          id="reportingActionsButton"
                          type="button"
                        >
                          <span
                            class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                fill-rule="non-zero"
                              />
                            </svg>
                            <span
                              class="euiButton__text"
                            >
                              Reporting
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
          </div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <p>
                Created on 12/14/2023 06:49 PM
              </p>
            </div>
          </div>
          <div
            class="euiSpacer euiSpacer--s"
          />
        </div>
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Delete all paragraphs
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Clear all outputs
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <span
                        class="euiButton__text"
                      >
                        Run all paragraphs
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiPopover euiPopover--anchorDownCenter"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small euiButton--fill"
                      data-test-subj="notebook-paragraph-actions-button"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoaded euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fill-rule="non-zero"
                          />
                        </svg>
                        <span
                          class="euiButton__text"
                        >
                          Add paragraph
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="margin-top: 10px;"
        >
          <div
            class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
          >
            <div
              class="euiSpacer euiSpacer--xxl"
            />
            <div
              class="euiText euiText--medium"
            >
              <div
                class="euiTextAlign euiTextAlign--center"
              >
                <h2>
                  No paragraphs
                </h2>
                <div
                  class="euiText euiText--small"
                >
                  Add a paragraph to compose your document or story. Notebooks now support two types of input:
                </div>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--xl"
            />
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceEvenly euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrow2"
              />
              <div
                class="euiFlexItem euiFlexItem--flexGrow3"
              >
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--hasIcon"
                >
                  <div
                    class="euiCard__top"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--xxLarge euiIcon-isLoaded euiCard__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2.414 8.036 4.89 10.51a.5.5 0 0 1-.707.708L1.354 8.389a.5.5 0 0 1 0-.707l2.828-2.828a.5.5 0 1 1 .707.707L2.414 8.036Zm8.768 2.474 2.475-2.474-2.475-2.475a.5.5 0 0 1 .707-.707l2.829 2.828a.5.5 0 0 1 0 .707l-2.829 2.829a.5.5 0 1 1-.707-.708ZM8.559 2.506a.5.5 0 0 1 .981.19L7.441 13.494a.5.5 0 0 1-.981-.19L8.559 2.506Z"
                      />
                    </svg>
                  </div>
                  <div
                    class="euiCard__content"
                  >
                    <span
                      class="euiTitle euiTitle--small euiCard__title"
                      id="random_html_idTitle"
                    >
                      Code block
                    </span>
                    <div
                      class="euiText euiText--small euiCard__description"
                      id="random_html_idDescription"
                    >
                      <p>
                        Write contents directly using markdown, SQL or PPL.
                      </p>
                    </div>
                  </div>
                  <div
                    class="euiCard__footer"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small"
                      data-test-subj="emptyNotebookAddCodeBlockBtn"
                      style="margin-bottom: 17px;"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButton__text"
                        >
                          Add code block
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrow3"
              >
                <div
                  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--hasIcon"
                >
                  <div
                    class="euiCard__top"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--xxLarge euiIcon-isLoaded euiCard__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 13h10V9.913l-2.571-2.826L8.56 8.753a.5.5 0 0 1-.728-.067L4.448 4.317 3 6.191V13Zm5.295-5.35 1.837-1.64a.5.5 0 0 1 .703.037l3.035 3.336a.5.5 0 0 1 .13.337v3.78a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5V6.02a.5.5 0 0 1 .104-.305l1.947-2.52a.5.5 0 0 1 .791-.001L8.295 7.65ZM1 15h13.5a.5.5 0 1 1 0 1H.5a.5.5 0 0 1-.5-.5v-14a.5.5 0 0 1 1 0V15Z"
                      />
                    </svg>
                  </div>
                  <div
                    class="euiCard__content"
                  >
                    <span
                      class="euiTitle euiTitle--small euiCard__title"
                      id="random_html_idTitle"
                    >
                      Visualization
                    </span>
                    <div
                      class="euiText euiText--small euiCard__description"
                      id="random_html_idDescription"
                    >
                      <p>
                        Import OpenSearch Dashboards or Observability visualizations to the notes.
                      </p>
                    </div>
                  </div>
                  <div
                    class="euiCard__footer"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small"
                      style="margin-bottom: 17px;"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButton__text"
                        >
                          Add visualization
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrow2"
              />
            </div>
            <div
              class="euiSpacer euiSpacer--xxl"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<Notebook /> spec Renders the visualization component 1`] = `
<body
  class=""
>
  <div>
    <div
      class="euiPage euiPage--paddingMedium euiPage--grow"
    >
      <div
        class="euiPageBody euiPageBody--borderRadiusNone"
      >
        <div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <h3
              class="euiTitle euiTitle--large"
              data-test-subj="notebookTitle"
            />
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <span
                      class="euiToolTipAnchor"
                    >
                      <button
                        class="euiButtonIcon euiButtonIcon--danger euiButtonIcon--small"
                        data-test-subj="notebook-delete-icon"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2Zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2ZM6 3h4V1H6v2Z"
                          />
                        </svg>
                      </button>
                    </span>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--small euiButton--fill"
                      data-test-subj="upgrade-notebook-callout"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButton__text"
                        >
                          Upgrade Notebook
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <p>
                Created on Invalid date
              </p>
            </div>
          </div>
          <div
            class="euiSpacer euiSpacer--s"
          />
        </div>
        <div
          class="euiFlexItem"
        >
          <div
            class="euiCallOut euiCallOut--primary"
          >
            <div
              class="euiText euiText--small"
            >
              <div
                class="euiTextColor euiTextColor--default"
              >
                Upgrade this notebook to take full advantage of the latest features
                <div
                  class="euiSpacer euiSpacer--s"
                />
                <button
                  class="euiButton euiButton--primary euiButton--small"
                  data-test-subj="upgrade-notebook"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <span
                      class="euiButton__text"
                    >
                      Upgrade Notebook
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--s"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          />
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            />
          </div>
        </div>
        <div
          style="margin-top: 10px;"
        >
          <div
            class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
          >
            <div
              class="euiSpacer euiSpacer--xxl"
            />
            <div
              class="euiText euiText--medium"
            >
              <div
                class="euiTextAlign euiTextAlign--center"
              >
                <h2>
                  No paragraphs
                </h2>
                <div
                  class="euiText euiText--small"
                >
                  Add a paragraph to compose your document or story. Notebooks now support two types of input:
                </div>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--xl"
            />
            <div
              class="euiSpacer euiSpacer--xxl"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
